# universal-ai-agent

./: .gitignore  README.md  pyproject.toml  requirements.txt
agent/: __init__.py  agent.py  cli.py  config.py  llm.py  router.py
agent/rag/: __init__.py  indexer.py  retriever.py
agent/tools/: __init__.py  base.py
config/: models-mac.yaml  models.yaml
config/prompts/: review.md  security.md  system.md
docs/: architecture.md  business-ideas-analysis.md  commands.md  configuration.md  mac-setup.md  rag.md  setup.md  troubleshooting.md  tz-ai-automation-platform.md  vscode.md
scripts/: setup-mac.sh  setup-wsl.sh
vscode-extension/: continue-config-example.yaml  settings-example.json  tasks.json
